# git-iris

./: CHANGELOG.md  CLAUDE.md  CONFIG.md  Cargo.toml  IRIS_COMPANION.md  README.md  ROADMAP.md  action.yml  clippy.toml  git-iris.1  install.sh  justfile
.github/workflows/: cicd.yml  docs.yml  release.yml
aur/: .SRCINFO  PKGBUILD  update-aur.sh
docker/: README.md  docker-entrypoint.sh  test-image.sh
docs/: TODO.md  index.md  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/architecture/: agent.md  capabilities.md  context.md  index.md  output.md  tools.md
docs/configuration/: environment.md  index.md  models.md  project-config.md  providers.md
docs/extending/: capabilities.md  contributing.md  index.md  modes.md  tools.md
docs/getting-started/: configuration.md  index.md  installation.md  quick-start.md
docs/reference/: cli.md  github-action.md  keybindings.md  tokens.md  troubleshooting.md
docs/studio/: chat.md  index.md  navigation.md
docs/studio-internals/: components.md  events.md  index.md  reducer.md
docs/studio/modes/: changelog.md  commit.md  explore.md  pr.md  release-notes.md  review.md
docs/themes/: creating.md  gallery.md  index.md  styles.md  tokens.md
docs/user-guide/: changelogs.md  commits.md  index.md  presets.md  pull-requests.md  release-notes.md  reviews.md
homebrew/: git-iris.rb  update-formula.sh
skills/git-iris/: SKILL.md
src/: changelog.rs  cli.rs  commands.rs  common.rs  config.rs  context.rs  crypto.rs  github.rs  gitmoji.rs  instruction_presets.rs  lib.rs  logger.rs  main.rs  messages.rs  output.rs  providers.rs  theme.rs  ui.rs
src/agents/: commit_style.rs  context.rs  core.rs  debug.rs  iris.rs  mod.rs  output_validator.rs  provider.rs  setup.rs  status.rs  status_messages.rs
src/agents/capabilities/: changelog.toml  chat.toml  commit.toml  pr.toml  release_notes.toml  review.toml  semantic_blame.toml  verify.toml
src/agents/setup/: tests.rs
src/agents/tools/: code_search.rs  common.rs  content_update.rs  docs.rs  file_read.rs  git.rs  mod.rs  parallel_analyze.rs  registry.rs  repo_map.rs  static_analysis.rs  workspace.rs
src/agents/tools/tests/: git_blame_tests.rs  git_show_tests.rs  mod.rs  repo_map_tests.rs  static_analysis_tests.rs
src/companion/: branch_memory.rs  mod.rs  session.rs  storage.rs  watcher.rs
src/companion/tests/: branch_memory_tests.rs  mod.rs  session_tests.rs
src/config/tests/: config_path_tests.rs  mod.rs  project_config_tests.rs
src/git/: commit.rs  files.rs  repository.rs  utils.rs
src/github/tests/: mod.rs
src/services/: git_commit.rs
src/studio/: events.rs  history.rs  mod.rs  theme.rs  utils.rs
src/studio/app/: agent_tasks.rs  mod.rs
src/studio/components/: code_view.rs  diff_view.rs  file_tree.rs  message_editor.rs  syntax.rs
src/studio/handlers/: commit.rs  explore.rs  mod.rs  review.rs
src/studio/reducer/: agent.rs  content.rs  mod.rs  modal.rs  navigation.rs
src/studio/render/: changelog.rs  chat.rs  commit.rs  pr.rs  release_notes.rs  review.rs
src/studio/render/modals/: settings.rs  theme_selector.rs
src/studio/state/: mod.rs  modes.rs
src/studio/tests/: commit_handler_tests.rs  explore_handler_tests.rs  global_handler_tests.rs  history_tests.rs  mod.rs  reducer_tests.rs
src/theme/tests/: theme_tests.rs
src/types/: changelog.rs  commit.rs  mod.rs  pr.rs  release_notes.rs  review.rs
tests/: agent_prompt_quality_tests.rs  agent_tests.rs  assistant_guide_docs_tests.rs  basic_git_operations_tests.rs  capability_prompt_tests.rs  changelog_tests.rs  commit_format_tests.rs  commit_style_detection_tests.rs  commit_style_tests.rs  config_tests.rs  default_base_refs_tests.rs  docs_prompt_guidance_tests.rs  file_exclusions_tests.rs  github_pr_template_tests.rs  gitmoji_tests.rs  openai_docs_guidance_tests.rs  pr_tests.rs  project_docs_tests.rs  remote_repository_integration_tests.rs  review_tests.rs  studio_docs_guidance_tests.rs  test_utils.rs  theme_tests.rs
tests/ux-journeys/: 01-alex-daily-committer.md  02-sam-code-reviewer.md  03-jordan-release-manager.md  04-morgan-explorer.md  05-casey-pr-author.md  README.md
