[package]
name = "git-iris"
version = "2.0.8"
edition = "2024"
authors = ["Stefanie Jane <stef@hyperbliss.tech>"]
description = "AI-powered Git workflow assistant for smart commits, code reviews, changelogs, and release notes"
readme = "README.md"
homepage = "https://github.com/hyperb1iss/git-iris"
repository = "https://github.com/hyperb1iss/git-iris"
license = "Apache-2.0"
keywords = ["git", "ai", "cli", "devtools", "productivity"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "docs/",
    "docker/",
    "homebrew/",
    "aur/",
    ".github/",
    "*.md",
    "!README.md",
    "CHANGELOG.md",
]

[lib]
name = "git_iris"
path = "src/lib.rs"

[[bin]]
name = "git-iris"
path = "src/main.rs"

[features]
integration = []

[dependencies]
anyhow = "1.0.102"
arboard = "3.6"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "cargo"] }
clap_complete = "4.6"
colored = "3.1"
crossterm = "0.29"
dirs = "6.0.0"
futures = "0.3.32"
git2 = "0.20.4"
ignore = "0.4"
indicatif = "0.18.4"
notify = "8.2"
notify-debouncer-full = "0.7.0"
lru = "0.16.3"
parking_lot = "0.12.5"
pulldown-cmark = "0.13"
rand = "0.10.0"
opaline = { version = "0.4.0", features = ["ratatui", "gradients", "global-state", "builtin-themes", "discovery", "cli"] }
ratatui = "0.30.0"
regex = "1.12"
reqwest = { version = "0.13.2", features = ["json"] }
rig-core = { version = "0.33.0", features = ["derive"] }
schemars = "1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.28.0"
strum_macros = "0.28.0"
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
tempfile = "3.27.0"
textwrap = "0.16.2"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
toml = "1.1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "time", "json", "chrono"] }
ratatui-textarea = "0.8.0"
unicode-width = "0.2"
url = "2.5.8"
uuid = { version = "1.22.0", features = ["v4", "serde"] }

[dev-dependencies]
dotenvy = "0.15"

[lints.rust]
unsafe_code = "forbid"
missing_docs = { level = "allow", priority = 1 }

[lints.clippy]
# Base lint groups
all = { level = "deny", priority = 0 }
style = { level = "warn", priority = 1 }
perf = { level = "deny", priority = 1 }

# Pedantic lints
pedantic = { level = "deny", priority = 10 }

# Documentation allowances
missing_errors_doc = { level = "allow", priority = 20 }
missing_panics_doc = { level = "allow", priority = 20 }
missing_safety_doc = { level = "allow", priority = 20 }

# Code style allowances - These remain allowed for pragmatic reasons
module_name_repetitions = { level = "allow", priority = 21 }
significant_drop_tightening = { level = "allow", priority = 21 }
must_use_candidate = { level = "allow", priority = 21 }

# Numeric casting and conversion warnings
cast_precision_loss = { level = "warn", priority = 22 }
cast_possible_truncation = { level = "warn", priority = 22 }
cast_sign_loss = { level = "warn", priority = 22 }
as_conversions = { level = "warn", priority = 22 }

# Safety-critical denials
out_of_bounds_indexing = { level = "deny", priority = 30 }
enum_glob_use = { level = "deny", priority = 30 }
unwrap_used = { level = "deny", priority = 30 }
undocumented_unsafe_blocks = { level = "deny", priority = 30 }

# Development/debugging lints
dbg_macro = { level = "warn", priority = 31 }
todo = { level = "warn", priority = 31 }
#print_stdout = { level = "warn", priority = 31 }  # CLI should use proper output mechanisms

# Async-specific lints (important for tokio-heavy codebase)
future_not_send = { level = "warn", priority = 32 }
async_yields_async = { level = "warn", priority = 32 }

# String and collection efficiency 
implicit_clone = { level = "warn", priority = 33 }
inefficient_to_string = { level = "warn", priority = 33 }
string_lit_as_bytes = { level = "warn", priority = 33 }

# Code complexity (helpful for maintainability)
too_many_lines = { level = "warn", priority = 34 }
cognitive_complexity = { level = "warn", priority = 34 }

# Error handling improvements
result_large_err = { level = "warn", priority = 35 }

# Modern Rust idioms
manual_let_else = { level = "warn", priority = 36 }
redundant_else = { level = "warn", priority = 36 }
semicolon_if_nothing_returned = { level = "warn", priority = 36 }
cloned_instead_of_copied = { level = "warn", priority = 36 }
flat_map_option = { level = "warn", priority = 36 }
from_iter_instead_of_collect = { level = "warn", priority = 36 }
needless_pass_by_value = { level = "warn", priority = 36 }
trivially_copy_pass_by_ref = { level = "warn", priority = 36 }
if_not_else = { level = "warn", priority = 36 }
match_same_arms = { level = "warn", priority = 36 }
needless_continue = { level = "warn", priority = 36 }

# Cargo manifest linting (multiple_crate_versions disabled - transitive deps)
multiple_crate_versions = { level = "allow", priority = 40 }

# Future considerations
#expect_used = { level = "deny", priority = 30 }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.deb]
maintainer = "Stefanie Jane <stef@hyperbliss.tech>"
copyright = "2024, Git-Iris Contributors <https://github.com/hyperb1iss/git-iris>"
license-file = ["LICENSE", "4"]
extended-description = """
Git-Iris is an AI-powered tool designed to generate meaningful and context-aware Git commit messages.
"""
depends = "$auto"
section = "utility"
priority = "optional"
# Assets will be resolved relative to target directory by cargo-deb when using --target
assets = [
    [
        "target/release/git-iris",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/git-iris/README",
        "644",
    ],
    [
        "git-iris.1",
        "usr/share/man/man1/git-iris.1",
        "644",
    ],
]

[package.metadata.generate-rpm]
# Assets will be resolved relative to target directory by cargo-generate-rpm when using --target
assets = [
    { source = "target/release/git-iris", dest = "/usr/bin/git-iris", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/git-iris/README", mode = "644" },
    { source = "git-iris.1", dest = "/usr/share/man/man1/git-iris.1", mode = "644" },
]
